--- a/css/style2.css
+++ b/css/style2.css
@@ -3,9 +3,45 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    
+}
+.imagen {
+    border: 2px solid #007bff;
+    margin: 10px;
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
 }
 
-h1, h2 {
+.imagen:hover {
+    transform: scale(1.1);
+}
+
+h1 {
+    font-size: 30px;
+    color: #092849;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 20px;
+    /* Efecto de texto con sombra */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+h2 {
+    font-size: 24px;
+    color: #333;
+    text-align: center;
+    margin-top: 20px;
+}
+
+p {
+    font-size: 16px;
+    color: #080808;
+    text-align: center;
+    margin-top: 10px;
+    line-height: 1.5;
+}
+
+h1, h2, h3 {
     text-align: center;
 }
 
@@ -21,6 +57,7 @@ ul {
 
 ul li {
     margin-bottom: 10px;
+    
 }
 
 a {
@@ -45,4 +82,32 @@ iframe {
 embed {
     display: block;
     margin: 0 auto;
+}
+
+.encabezado {
+    font-size: 24px;
+    color: hsl(210, 87%, 9%);
+    margin-top: 20px;
+}
+.parent{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+ul {
+    list-style-type: disc;
+    margin-left: 20px;
+}
+
+li {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+p {
+    font-size: 16px;
+    margin-top: 10px;
+    line-height: 1.5;
 }
