--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,17 @@ body {
     background-color: #f3ebeb;
 }
 .h1 {
-    font-size: 35px;
-    color: #0a315a;
+    font-size: 37px;
+    color: #265180;
     text-transform: uppercase;
     overflow: hidden; 
     white-space: nowrap; 
     animation: reveal 5s ease-in-out; 
+}
+.informacion{
+    color: #708ba7;
+    font-size: 20px;
+
 }
 @keyframes reveal {
     0% {
@@ -19,6 +24,18 @@ body {
     100% {
         width: 100%; 
     }
+}
+
+.img2 {
+    width: 300px; 
+    border: 5px solid #007bff; 
+    border-radius: 10px; 
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); 
+    transition: transform 0.3s ease-in-out; 
+}
+
+.img2:hover {
+    transform: scale(1.1); 
 }
 /*@keyframes rotate {
     0% {
@@ -63,24 +80,23 @@ body {
 .container {
     display: flex;
     justify-content: space-between;
-    max-width: 1200px;
+    max-width: 1300px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #10dee6;
+    /*background-color: #10dee6;*/
+     background-image: linear-gradient(to bottom, #150a46, #243e50);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow-y: auto; 
     max-height: 900px; 
 }
-.container2 {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    text-align: center;
-}
+
 
 
 header {
-    background-color: #052e58;
+   /* background-color: #052e58;*/
+   background-image: linear-gradient(to bottom, #516377, #0e0230);
+  
+    
     color: #fff;
     text-align: center;
     padding: 15px 0;
@@ -100,7 +116,7 @@ header {
 }
 
 nav {
-    background-color: #007bff; 
+    background-image: linear-gradient(to bottom, #0eabb1, #051f92);
     padding: 10px 0;
     text-align: center;
 }
@@ -118,6 +134,9 @@ nav ul li {
 
 nav ul li:last-child {
     margin-right: 0;
+    color: #fff; 
+    font-weight: bold;
+    transition: color 0.3s; 
 }
 
 nav ul li a {
@@ -126,14 +145,27 @@ nav ul li a {
     font-weight: bold;
     transition: color 0.3s; 
 }
+nav ul li a span img {
+    display: inline;
 
+}
+nav ul li a span {
+    display: inline-flex; /* Alinea la imagen y el texto en línea */
+    align-items: center; /* Centra verticalmente */
+    margin-left: 5px; /* Espacio entre la imagen y el texto */
+    display: inline;
+    
+}
 nav ul li a:hover {
     color: #0056b3; 
 }
-
+nav ul li:hover {
+    color: #0056b3; 
+}
 
 aside {
-    background-color: #333;
+    /*background-color: #333;*/
+    background-image: linear-gradient(to bottom, #121314, #474649);
     color: #fff;
     padding: 20px;
 }
@@ -167,7 +199,9 @@ aside ul li a {
     text-align: center;
     margin-top: 10px;
   }
-  
+  .Menu{
+    color: #faf9f9; 
+  }
   .header-author {
     font-size: 16px;
     color: #faf9f9; 
@@ -181,6 +215,7 @@ aside ul li a {
   }
   .menu-title:hover {
     transform: scale(1.1); 
+    color: #faf9f9; 
     transition: transform 0.3s ease-in-out; 
   }
   
