--- a/css/style.css
+++ b/css/style.css
@@ -150,9 +150,9 @@ nav ul li a span img {
 
 }
 nav ul li a span {
-    display: inline-flex; /* Alinea la imagen y el texto en línea */
-    align-items: center; /* Centra verticalmente */
-    margin-left: 5px; /* Espacio entre la imagen y el texto */
+    display: inline; 
+    align-items: center; 
+    margin-left: 5px; 
     display: inline;
     
 }
